# Kuramoto-Model

./: LICENSE  README.md  kuramoto_oscillators.py  pyproject.toml
src/: kuramoto_model.py
