[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Kuramoto_Model"
version = "0.0.1"
authors = [
  { name="Rishabh Bapat", email="rishabhbapat@gmail.com" },
]
description = "A python implementation of the Kuramoto model"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
